Renamed page from Scraper Figures to Dashboard

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Header -->
     <div class="hero-unit">
-      <h1>TCGA Scraper Figures</h1>
+      <h1>TCGA Dashboard</h1>
       <p>This page contains reported figures, generated using the TCGA Scraper and demonstrating the reproducability of analysis therewith enabled.</p>
       <p>
         <a class="btn btn-primary btn-large" href="https://github.com/tcga/Scraper">Source</a> 
