Added contact information.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
       </div>
     </div>
 
+    <hr />
+
+    <footer>
+      <p>
+          University of Alabama at Birmingham<br>
+          Division of Informatics<br>
+          Department of Pathology<br>
+          <a href="http://uab.mathbiol.org/informatics">http://uab.mathbiol.org/informatics</a>
+      </p>
+      <p>
+          Contact: <a href="mailto:robbinsd@uab.edu">David Robbins</a>
+      </p>
+    </footer>
+
 
   </div>
 
