Added link to pubmed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 
     <!-- Header -->
     <div class="page-header">
-      <h1 id="top" class="muted">TCGA Roadmap Dashboard</h1>
+      <div class="row-fluid">
+        <div class="span8">
+          <h1 id="top" class="muted">
+            TCGA Roadmap Dashboard
+          </h1>
+        </div>
+        <div class="span4">
+          <h3 class="pull-right"><a href="http://www.ncbi.nlm.nih.gov/pubmed/23595662">[PMID  23595662]</a></h3>
+        </div>
+      </div>
     </div>
 
     <div class="navbar">
